<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleached_cedar"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/contact_add_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_add_appbar_height"
        android:background="@color/appbar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_back"
        app:title="@string/add_contact"
        app:titleTextAppearance="@style/ContactsHeader" />

    <include
        android:id="@+id/contact_add_label_first_name"
        layout="@layout/include_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contact_add_label_margin_bottom"
        app:layout_constraintBottom_toTopOf="@id/contact_add_input_first_name"
        app:layout_constraintStart_toStartOf="@id/contact_add_input_first_name" />

    <include
        android:id="@+id/contact_add_input_first_name"
        layout="@layout/include_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contacts_input_margin_start_end"
        android:layout_marginTop="@dimen/contact_add_input_margin_top"
        android:layout_marginEnd="@dimen/contacts_input_margin_start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_add_appbar" />

    <include
        android:id="@+id/contact_add_invalid_first_name"
        layout="@layout/include_text_invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contact_add_label_margin_bottom"
        app:layout_constraintEnd_toEndOf="@id/contact_add_input_first_name"
        app:layout_constraintTop_toBottomOf="@id/contact_add_input_first_name" />

    <include
        android:id="@+id/contact_add_label_second_name"
        layout="@layout/include_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contact_add_label_margin_bottom"
        app:layout_constraintBottom_toTopOf="@id/contact_add_input_second_name"
        app:layout_constraintStart_toStartOf="@id/contact_add_input_second_name" />

    <include
        android:id="@+id/contact_add_input_second_name"
        layout="@layout/include_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contacts_input_margin_start_end"
        android:layout_marginTop="@dimen/contact_add_input_margin_top"
        android:layout_marginEnd="@dimen/contacts_input_margin_start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_add_input_first_name" />

    <include
        android:id="@+id/contact_add_label_number"
        layout="@layout/include_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contact_add_label_margin_bottom"
        app:layout_constraintBottom_toTopOf="@id/contact_add_input_number"
        app:layout_constraintStart_toStartOf="@id/contact_add_input_number" />


    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/contact_add_input_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_add_input_height"
        android:layout_marginStart="@dimen/contacts_input_margin_start_end"
        android:layout_marginTop="@dimen/contact_add_input_margin_top"
        android:layout_marginEnd="@dimen/contacts_input_margin_start_end"
        android:background="@drawable/bg_rounded_edittext"
        android:fontFamily="@font/geometria"
        android:hint="@string/number_placeholder"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_add_input_second_name"
        app:mask="+7 ### ### ## ##" />

    <include
        android:id="@+id/contact_add_invalid_number"
        layout="@layout/include_text_invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contact_add_label_margin_bottom"
        app:layout_constraintEnd_toEndOf="@id/contact_add_input_number"
        app:layout_constraintTop_toBottomOf="@id/contact_add_input_number" />

    <Button
        android:id="@+id/button_ready"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_add_input_height"
        android:layout_marginStart="@dimen/contacts_input_margin_start_end"
        android:layout_marginTop="@dimen/contact_add_input_margin_top"
        android:layout_marginEnd="@dimen/contacts_input_margin_start_end"
        android:background="@color/appbar_color"
        android:enabled="false"
        android:fontFamily="@font/geometria"
        android:text="@string/contact_add_ready"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_add_input_number" />


</androidx.constraintlayout.widget.ConstraintLayout>